Fix alignment

--- a/src/components/Sort/styles.module.css
+++ b/src/components/Sort/styles.module.css
@@ -21,7 +21,7 @@
     padding: 0;
     position: fixed;
     right: 8px;
-    top: 62px;
+    top: 8px;
     width: auto;
     z-index: 10;
   }
